# azure-ai-foundary-project-python

./: .env.template  README.md  pyproject.toml
src/azure_ai_foundary_project_python/: __init__.py  project.py
src/azure_ai_foundary_project_python/credential/: __init__.py  base_credential.py  default_credential.py  project_credential.py
src/azure_ai_foundary_project_python/services/: __init__.py  azure_search_service.py
